client/src/App.scss
.main-container {
  margin: 0 auto;
  

  .container {
    width: 100%;
    max-width: 98rem;
    margin: 0 auto;
    padding: 0 1.5rem;
  }
  .title-heading {
    text-align: center;
    text-transform: uppercase;
    margin-bottom: 10rem;
    color: rgba(0, 0, 0, 0.7);
  }
  .btn {
    background-color: rgba(79, 0, 250, 0.79);
    border-radius: 2rem;
    margin-top: 2rem;
    padding: 1rem 2.5rem;
    color: #fafafa;
    text-transform: uppercase;
    display: inline-block;
    border: none;
    cursor: pointer;
    transition: background-color 650ms;

    &:hover {
      background-color: #3700ad;
    }
  }

  @media screen and (min-width: 350px) {
    .main-message {
      transform: translateY(40%);
    }
  }

  @media screen and (min-width: 470px) {
    .cta::before {
      height: 9.4rem;
      background: url("./img/wave-medium.png");
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
    }
    .testimonials::before {
      height: 9.4rem;
      background: url("./img/wave-medium-reversed.png");
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
    }
  }

  @media screen and (min-width: 700px) {
    .cta {
      height: 60vh;
    }
    .main-message {
      transform: translateY(60%);
    }
    .title-heading {
      h1 {
        font-size: 2.5rem;
      }
    }
  }

  @media screen and (min-width: 900px) {
    .cta::before {
      height: 22.7rem;
      background: url("./img/wave-large.png");
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
    }
    .testimonials::before {
      height: 22.7rem;
      background: url("./img/wave-large-reversed.png");
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
    }
  }

  @media screen and (min-width: 1200px) {
    .cta {
      height: 75vh;
    }
  }
}

